--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,15 @@ body{
     font-family: 'Poppins', sans-serif;
 }
 
+.bg-body{
+    background-image: linear-gradient(rgba(0,0,0,.9), rgba(0,0,0,.8)),  url("../src/assets/img/bg-body.jpg") ;
+    background-repeat: no-repeat;
+    object-fit: cover;
+    background-attachment: fixed;
+    background-position: bottom;
+    background-size: cover;  
+}
+
 .hero-bg{
     background-image: url("../src/assets/img//bg-hero.jpg") ;
     background-repeat: no-repeat;
