--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,7 @@ body{
 }
 
 .bg-body{
-    background-image: linear-gradient(rgba(0,0,0,.9), rgba(165, 6, 6, 0.77)),  url("../src/assets/img/bg-body.jpg") ;
+    background-image: linear-gradient(rgba(168, 14, 14, 0.87), rgba(105, 8, 8, 0.89)),  url("../src/assets/img/bg-body.jpg") ;
     background-repeat: no-repeat;
     object-fit: cover;
     background-attachment: fixed;
@@ -26,6 +26,7 @@ body{
     background-attachment: fixed;
     background-position: bottom;
     background-size: cover;
+    
 }
 
 .bg-details{
