--- a/src/index.css
+++ b/src/index.css
@@ -16,7 +16,7 @@ html{
 }
 
 .bg-body{
-    background-image: linear-gradient(rgba(168, 14, 14, 0.822), rgba(150, 10, 10, 0.795)),  url("../src/assets/img/bg-body.jpg") ;
+    background-image: linear-gradient(rgba(97, 4, 4, 0.89), rgba(150, 10, 10, 0.795)),  url("../src/assets/img/bg-body.jpg") ;
     background-repeat: no-repeat;
     object-fit: cover;
     background-attachment: fixed;
@@ -27,11 +27,10 @@ html{
 
 
 .hero-bg{
-    background-image: url("../src/assets/img//bg-hero.jpg") ;
+    background-image: linear-gradient(rgba(14, 14, 14, .5), rgba(7, 7, 7, 0.7)),  url("../src/assets/img//bg-hero.jpg") ;
     background-repeat: no-repeat;
-    object-fit: cover;
     background-attachment: fixed;
-    background-position: bottom;
+    background-position: bottom  ;
     background-size: cover;
     
 }
