--- a/src/index.css
+++ b/src/index.css
@@ -53,3 +53,9 @@ html{
 	50% { transform: translateY(-16px); }
 	100% { transform: translateY(0); }
 }
+
+button{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: bold;
+    font-size: 12px!important;
+}
