--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,8 @@
 body{
     background-color: #0f0f0f;
     color: white;
+    height: 100%;
+    overflow-x: hidden;
     font-family: 'Poppins', sans-serif;
 }
 
